--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,63 @@
+* {
+  box-sizing: border-box;
+  font-family: "Cormorant Garamond", serif;
+  color: #777;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.nav ul {
+  margin: 0;
+}
+
+.nav li {
+  display: inline;
+}
+
+.nav a {
+  display: inline-block;
+  padding: 0.5em;
+  color: white;
+  text-decoration: none;
+}
+
+.main-nav {
+  text-align: center;
+  font-size: 1.1em;
+  font-weight: lighter;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.main-nav li {
+  padding: 0 5%;
+}
+
+.nav a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.main-header {
+  background: rgb(242, 146, 162);
+  background-size: cover;
+  padding-bottom: 30px;
+}
+
+.name {
+  text-align: center;
+  margin: 0;
+  font-size: 4em;
+  color: white;
+}
+
+.name-large {
+  font-size: 6em;
+  padding-top: 0.7em;
+}
+
 img {
   width: 10%;
   height: 10%;
