--- a/styles.css
+++ b/styles.css
@@ -49,20 +49,71 @@ body {
 .name {
   text-align: center;
   margin: 0;
-  font-size: 4em;
+  font-size: 2em;
   color: white;
 }
 
 .name-large {
   font-size: 6em;
-  padding-top: 0.7em;
+  padding: 0.5em;
 }
 
 img {
-  width: 10%;
-  height: 10%;
+  width: 30px;
+  height: 30px;
+  color: aliceblue;
 }
 
 .cart-img {
   width: 5%;
+}
+
+.content-section {
+  margin: 1em;
+}
+
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0 1.5em;
+}
+
+.section-header {
+  font-weight: normal;
+  color: #333;
+  text-align: center;
+  font-size: 2.5em;
+}
+
+.about-image {
+  float: left;
+  height: 200px;
+  width: 200px;
+  margin: 15px;
+  border-radius: 100%;
+}
+
+.main-footer {
+  background: rgb(242, 146, 162);
+  color: white;
+  padding: 0.25em 0;
+}
+
+.main-footer-container {
+  display: flex;
+  align-items: center;
+}
+
+.main-footer-container ul {
+  flex-grow: 1;
+  text-align: end;
+}
+
+.footer-nav li {
+  padding: 0 0.5em;
+}
+
+.footer-nav svg {
+  width: 30px;
+  height: 30px;
 }
