--- a/styles.css
+++ b/styles.css
@@ -20,14 +20,14 @@ body {
 
 .nav a {
   display: inline-block;
-  padding: 0.5em;
+  padding: 0.5rem;
   color: white;
   text-decoration: none;
 }
 
 .main-nav {
   text-align: center;
-  font-size: 1.1em;
+  font-size: 1.1rem;
   font-weight: lighter;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
@@ -49,13 +49,13 @@ body {
 .name {
   text-align: center;
   margin: 0;
-  font-size: 2em;
+  font-size: 2rem;
   color: white;
 }
 
 .name-large {
-  font-size: 6em;
-  padding: 0.5em;
+  font-size: 6rem;
+  padding: 0.5rem;
 }
 
 img {
@@ -69,20 +69,20 @@ img {
 }
 
 .content-section {
-  margin: 1em;
+  margin: 1rem;
 }
 
 .container {
   max-width: 900px;
   margin: 0 auto;
-  padding: 0 1.5em;
+  padding: 0 1.5rem;
 }
 
 .section-header {
   font-weight: normal;
   color: #333;
   text-align: center;
-  font-size: 2.5em;
+  font-size: 2.5rem;
 }
 
 .about-image {
@@ -96,7 +96,7 @@ img {
 .main-footer {
   background: rgb(242, 146, 162);
   color: white;
-  padding: 0.25em 0;
+  padding: 0.25rem 0;
 }
 
 .main-footer-container {
@@ -110,10 +110,66 @@ img {
 }
 
 .footer-nav li {
-  padding: 0 0.5em;
+  padding: 0 0.5rem;
 }
 
 .footer-nav svg {
   width: 30px;
   height: 30px;
+}
+
+.btn {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  padding: 0.75rem;
+  cursor: pointer;
+}
+
+.btn-header {
+  background-color: rgba(255, 255, 255.1);
+  font-size: 1rem;
+  font-weight: lighter;
+}
+
+.btn:hover {
+  background-color: rgb(255, 255, 255);
+}
+
+.btn-play {
+  padding: 0;
+  display: block;
+  margin: 0 auto;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.podcast-row {
+  border-bottom: 1px solid black;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+}
+
+.podcast-row:last-child {
+  border-bottom: none;
+}
+
+.podcast-item {
+  display: inline-block;
+  padding-right: 0.5em;
+}
+
+.podcast-date {
+  color: #555;
+  font-weight: bold;
+  width: 11%;
+}
+
+.podcast-author {
+  width: 24%;
+}
+
+.podcast-title {
+  width: 42%;
 }
